Make sure prize modal covers the full height of the screen

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5245,6 +5245,7 @@ a {
   right: 0;
   top: 0;
   z-index: 200;
+  min-height: 100%;
   padding: 5.5rem 2rem 2rem;
   background: rgba(0, 0, 0, 0.9);
   transition: transform 0.2s ease;
